--- a/Pages/MyProfile.razor
+++ b/Pages/MyProfile.razor
@@ -1,7 +1,6 @@
 ﻿@page "/myprofile"
 @inject Siemens.MP.Data.ApplicationDbContext DbContext
 @using Siemens.MP.Entities;
-@inject Siemens.MP.Data.TaskRepository TaskRepository
 <head>
     <link rel="stylesheet" href="/css/MyProfile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -43,90 +42,14 @@
 
         <div class="col-md-8">
 
-            <div class="card" id="profile" style="margin-bottom:50px;">
+            <CardProject></CardProject>
 
-                <div class="panel panel-default">
-                    <div class="panel-heading panelbackground">
-                        <div class="panel-title pull-left titlecard">
-                            Projects
-                        </div>
-                        <div class="pull-right">
-                            <input type="text" class="myInput" @bind-value="@searchTerm" @bind-value:event="oninput" placeholder="Search for projects.." />
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-
-                <hr style="margin-top:0px;margin-bottom:0px;">
-
-                <ul id="myProjectList">
-                    <li><a href="#">Project 1</a></li>
-                    <li><a href="#">Project 2</a></li>
-                    <li><a href="#">Project 3</a></li>
-                </ul>
-
-            </div>
-
-            <div class="card" id="profile" style="margin-bottom:50px; margin-top:30px;">
-
-                <div class="panel panel-default">
-                    <div class="panel-heading panelbackground">
-                        <div class="panel-title pull-left titlecard">
-                            Tasks
-                        </div>
-                        <div class="pull-right">
-                            <input type="text" class="myInput" @bind-value="@searchTerm" @bind-value:event="oninput" placeholder="Search for tasks.." />
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-
-                <hr style="margin-top:0px;margin-bottom:0px;">
-
-
-                <ul class="list-group">
-                    @foreach (var task in filteredTasks)
-                    {
-
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a href="#">@task.Name</a>
-                            @if (task.State == Enums.StateOfTask.TO_DO)
-                            {
-                                <span class="badge badge-primary badge-pill list-group-item-danger">@task.State</span>
-                            }
-                            else if (task.State == Enums.StateOfTask.DONE)
-                            {
-                                <span class="badge badge-primary badge-pill list-group-item-success">@task.State</span>
-                            }
-                            else if (task.State == Enums.StateOfTask.CODE_REVIEW)
-                            {
-                                <span class="badge badge-primary badge-pill list-group-item-light">@task.State</span>
-                            }
-                            else if (task.State == Enums.StateOfTask.ONGOING)
-                            {
-                                <span class="badge badge-primary badge-pill list-group-item-info">@task.State</span>
-                            }
-                        </li>
-
-                    }
-                </ul>
-
-
-            </div>
+            <CardTask></CardTask>
 
         </div>
     </div>
 </body>
 @code {
-    private IList<Siemens.MP.Entities.Task> tasks;
-    private string searchTerm { get; set; } = "";
-
-    protected override async System.Threading.Tasks.Task OnInitializedAsync()
-    {
-        tasks = await TaskRepository.GetTasksAsync();
-    }
-    private IList<Siemens.MP.Entities.Task> filteredTasks => tasks.Where(i => i.Name.ToLower().Contains(searchTerm.ToLower())).ToList();
-
 
 
 }
