--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model RegisterModel
+@using Siemens.MP.Enums
 @{
     ViewData["Title"] = "Register";
 }
@@ -16,6 +17,7 @@
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
@@ -26,6 +28,13 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Choose Role</label>
+                <select asp-for="Input.roleType" asp-items="Html.GetEnumSelectList<RoleType>()">
+                    <option value="">Choose Role</option>
+                </select>
+                <span asp-validation-for="Input.roleType" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
