--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Siemens.MP.Enums
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">Siemens.MP</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -12,11 +13,13 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+        <AuthorizeView Roles="Mentor">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </li>
+          </AuthorizeView>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Projects
