refactored place of components

--- a/Pages/MyProfile.razor
+++ b/Pages/MyProfile.razor
@@ -1,6 +1,7 @@
 ﻿@page "/myprofile"
 @inject Siemens.MP.Data.ApplicationDbContext DbContext
 @using Siemens.MP.Entities;
+@using Siemens.MP.Pages.Components
 <head>
     <link rel="stylesheet" href="/css/MyProfile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
