--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿@using Siemens.MP.Enums
+
 <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">Siemens.MP</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -13,9 +14,9 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-        <AuthorizeView Roles="Mentor">
+        <AuthorizeView Roles="Admin">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="Identity/Account/Register">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </li>
