--- a/Pages/MyProfile.razor
+++ b/Pages/MyProfile.razor
@@ -43,9 +43,9 @@
 
         <div class="col-md-8">
 
-            <CardProject></CardProject>
+            <CardProjectComponent></CardProjectComponent>
 
-            <CardTask></CardTask>
+            <CardTaskComponent></CardTaskComponent>
 
         </div>
     </div>
