--- a/Pages/Projects.razor
+++ b/Pages/Projects.razor
@@ -24,7 +24,8 @@ else
             </ol>
         </div>
         <div class="project-second-column">
-                <Siemens.MP.Pages.Components.ProjectTasksComponent @bind-IdProject="ProjectID" ></Siemens.MP.Pages.Components.ProjectTasksComponent>
+            <Siemens.MP.Pages.Components.DetailedProjectComponent></Siemens.MP.Pages.Components.DetailedProjectComponent>
+            <Siemens.MP.Pages.Components.ProjectTasksComponent @bind-IdProject="ProjectID" ></Siemens.MP.Pages.Components.ProjectTasksComponent>
         </div>
     </div>
 }
