--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -15,12 +15,12 @@
             </NavLink>
         </li>
         <AuthorizeView Roles="Admin">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Identity/Account/Register">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-          </AuthorizeView>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Identity/Account/Register">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                </NavLink>
+            </li>
+        </AuthorizeView>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Projects
@@ -34,6 +34,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="myprofile">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> MyProfile
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="knowledge">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> KnowledgeDatabase
             </NavLink>
         </li>
 
