--- a/Pages/Components/DetailedProjectComponent.razor
+++ b/Pages/Components/DetailedProjectComponent.razor
@@ -1,31 +1,39 @@
-﻿
-<div class="card" >
-    <div class="card-body">
-        <h5 class="card-title">Project name</h5>
-        <p class="card-text">Project description lorem ipsum bla bla sal cf</p>
-    </div>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-            Owner:
-            <span class="badge badge-primary badge-pill list-group-item-danger">Name of the owner</span>
-        </li>
-        <li class="list-group-item">
-            Deadline:
-            <span class="badge badge-primary badge-pill list-group-item-success">Marti intr-o joi</span>
-        </li>
+﻿@if (IdProject == 1)
+{
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title" style="font-weight:bold">Project name</h5>
+            <p class="card-text">Project description lorem ipsum bla bla sal cf</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                <span class="taskinfo badge badge-primary badge-pill list-group-item-danger">Name of the owner</span>
+            </li>
+            <li class="list-group-item">
+                <span class="taskinfo badge badge-primary badge-pill list-group-item-success">Marti intr-o joi</span>
+            </li>
 
-        <li class="list-group-item">
-            <h4>Students working on this project</h4>
-            <span class="badge badge-primary badge-pill list-group-item-info">Marcelino</span>
-            <span class="badge badge-primary badge-pill list-group-item-info">Iohannis</span>
-            <span class="badge badge-primary badge-pill list-group-item-info">Base</span>
-            <span class="badge badge-primary badge-pill list-group-item-info">Dancila</span>
-        </li>
-    </ul>
-    <div class="card-body">
-        <a href="#" class="card-link">Go to detailed description</a>
+            <li class="list-group-item">
+                <h4>Students working on this project</h4>
+                <span class="taskinfo badge badge-primary badge-pill list-group-item-info">Marcelino</span>
+                <span class="taskinfo badge badge-primary badge-pill list-group-item-info">Iohannis</span>
+                <span class="taskinfo badge badge-primary badge-pill list-group-item-info">Base</span>
+                <span class="taskinfo badge badge-primary badge-pill list-group-item-info">Dancila</span>
+            </li>
+        </ul>
     </div>
-</div>
+}
+else if (IdProject == 0)
+{
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Please choose a project from the list to get detailed information about it.</h4>
+        </div>
+    </div>   
+}
 @code {
-
+    [Parameter]
+    public int IdProject { get; set ; }
+    [Parameter]
+    public EventCallback<int> IdProjectChanged { get; set; }
 }
