--- a/Pages/Components/ProjectTasksComponent.razor
+++ b/Pages/Components/ProjectTasksComponent.razor
@@ -10,7 +10,7 @@
                 <h4>To do tasks</h4>
                 @foreach (Siemens.MP.Entities.Task task in tasks) if (task.State == Enums.StateOfTask.TO_DO)
                     {
-                        <span class="badge badge-primary badge-pill list-group-item-success">@task.Name</span><br />
+                        <span class="taskinfo badge badge-primary badge-pill list-group-item-danger">@task.Name</span><br />
                     }
             </div>
         </div>
@@ -19,7 +19,7 @@
                 <h4>Ongoing tasks</h4>
                 @foreach (Siemens.MP.Entities.Task task in tasks) if (task.State == Enums.StateOfTask.ONGOING)
                     {
-                        <span class="badge badge-primary badge-pill list-group-item-info">@task.Name</span><br />
+                        <span class="taskinfo badge badge-primary badge-pill list-group-item-info">@task.Name</span><br />
                     }
             </div>
         </div>
@@ -28,7 +28,7 @@
                 <h4>On review tasks</h4>
                 @foreach (Siemens.MP.Entities.Task task in tasks) if (task.State == Enums.StateOfTask.CODE_REVIEW)
                     {
-                         <span class="badge badge-primary badge-pill list-group-item-warning">@task.Name</span><br />
+                         <span class="taskinfo badge badge-primary badge-pill list-group-item-warning">@task.Name</span><br />
                     }
             </div>
         </div>
@@ -37,7 +37,7 @@
                 <h4>Done tasks</h4>
                 @foreach (Siemens.MP.Entities.Task task in tasks) if (task.State == Enums.StateOfTask.DONE)
                     {
-                        <span class="badge badge-primary badge-pill list-group-item-success">@task.Name</span><br />
+                        <span class="taskinfo badge badge-primary badge-pill list-group-item-success">@task.Name</span><br />
                     }
             </div>
         </div>
