--- a/Pages/DetailedTask.razor
+++ b/Pages/DetailedTask.razor
@@ -18,17 +18,17 @@
                     </div>
                 </div>
                 <div class="form-group ">
-                    <textarea style="height:90px" class="form-control border-style" rows="7" id="comment"></textarea>
+                    <textarea style="height:90px" class="form-control border-style commet-area" rows="7"></textarea>
                     <button type="button" class="btn btn-primary button1">Submit</button>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container  ">
+    <div class="container">
         <div class="float-right right-side-container ">
             <ul class="list-group ">
-                <li  class="list-group-item py-4 border-style size-of-details">Assignee: <img src="/css/bootstrap/img.jpg" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width:40px;" /> John Doe </li>
-                <li class="list-group-item py-4 border-style size-of-details">Reporter: <img src="/css/bootstrap/img.jpg" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width:40px;"/> Alt John Doe..</li>
+                <li class="list-group-item py-4 border-style size-of-details">Assignee: <img src="/css/bootstrap/img.jpg" alt="John Doe" class="mr-1 mt-1 rounded-circle" style="width:40px;" /> Baies Darius Incaunnume alfabetuefrumos </li>
+                <li class="list-group-item py-4 border-style size-of-details">Reporter: <img src="/css/bootstrap/img.jpg" alt="John Doe" class="mr-1 mt-1 rounded-circle" style="width:40px;"/> Alban the big nosed one</li>
                 <li class="list-group-item py-4 border-style size-of-details">Status: <span class="badge badge-secondary">To_Do </span></li>
                 <li class="list-group-item py-4 border-style size-of-details">Priority: <span class="badge badge-danger">Urgent</span> </li>
                 <li class="list-group-item py-4 border-style size-of-details">Created Date : @date1</li>
